# DNA-Sequence-Classification-and-Compression

./: .gitignore  README.md  pyproject.toml
data/ClinVar_Eye_Disease_Data/AMD/cfh/: cfh_variants.txt
data/ClinVar_Eye_Disease_Data/AMD/htra1/: htra1_variants.txt
data/ClinVar_Eye_Disease_Data/Glaucoma/cyp1b1/: cyp1b1_variants.txt
data/ClinVar_Eye_Disease_Data/Leber_Congenital_Amaurosis/crb1/: crb1_variants.txt
data/ClinVar_Eye_Disease_Data/Leber_Congenital_Amaurosis/rpe65/: rpe65_variants.txt
data/ClinVar_Eye_Disease_Data/RP/rpgr/: rpgr_variants.txt
src/dna_seq/analysis/: analyze_data.py
src/dna_seq/data/ClinVar/AMD/arms2/: arms2_variants.txt
src/dna_seq/data/ClinVar/Glaucoma/myoc/: myoc_variants.csv
src/dna_seq/data/ClinVar/RP/ush2a/: ush2a_variants.txt
src/dna_seq/data/ClinVar_Eye_Disease/Glaucoma/myoc/: myoc_variants.txt
src/dna_seq/data/ClinVar_Eye_Disease/Glaucoma/optn/: optn_variants.txt
src/dna_seq/data/ClinVar_Eye_Disease/Leber_Congenital_Amaurosis/cep290/: cep290_variants.txt
src/dna_seq/data/ClinVar_Eye_Disease/RP/rho/: rho_variants.txt
src/dna_seq/data/ClinVar_Eye_Disease/RP/rp1/: rp1_variants.txt
src/dna_seq/data/ClinVar_Eye_Disease/cleaning_data/: CSVFileHandler.py
src/dna_seq/data/Ensembl/AMD/arms2/: arms2_transcripts.csv
src/dna_seq/data/Ensembl/AMD/cfh/: cfh_transcripts.csv
src/dna_seq/data/Ensembl/AMD/htra1/: htra1_transcripts.csv
src/dna_seq/data/Ensembl/Glaucoma/cyp1b1/: cyp1b1_transcripts.csv
src/dna_seq/data/Ensembl/Glaucoma/myoc/: myoc_transcripts.csv
src/dna_seq/data/OMIM/cleaning_data/: omim_client.py
(+85 files in other folders)
